--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -2,7 +2,10 @@
 $white: #fff;
 $owhite: #f4f4f4;
 $ltgray: #DADADA;
+$medgray: #CBCBCB;
 $gray: #939393;
+$dkgray: #2A2A2A;
+$secondary_text_color: #a7a7a7;
 $text_color: #222;
 $blue: #5E97D1;
 $dkblue: #407FC0;
