Add remove, subtract, add buttons to cart. Reorg sass files.

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 //colors
 $white: #fff;
-$owhite: #f4f4f4;
+$owhite: #F4F4F4;
 $ltgray: #DADADA;
 $medgray: #CBCBCB;
 $gray: #939393;
@@ -9,6 +9,9 @@ $secondary_text_color: #a7a7a7;
 $text_color: #222;
 $blue: #5E97D1;
 $dkblue: #407FC0;
+$red: #CC1D39;
+$buttonowhite: #F5F5F5;
+$buttongray: #8E939C;
 
 //breakpoint variables
 $screen-mobile: 500px;
